# docs/swagger.json
@@ -1,24 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is an auto-generated API Docs.",
-        "title": "API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "email": "your@mail.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "basePath": "/api",
     "paths": {
-        "/v1/deal": {
+        "/api/v1/deal": {
             "get": {
-                "description": "Start a new game or deal an existing one.",
+                "description": "Start a new game or deal for an existing one.",
                 "consumes": [
                     "application/json"
                 ],
@@ -35,12 +23,83 @@
                         "schema": {
                             "$ref": "#/definitions/models.ResponseMsg"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMsg"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/hit": {
+            "get": {
+                "description": "Draw a new card from the dealer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Game"
+                ],
+                "summary": "hit move",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseMsg"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMsg"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMsg"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "models.ErrorMsg": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.PlayStatus": {
+            "type": "string",
+            "enum": [
+                "Dealer Bust",
+                "Player Wins",
+                "Dealer Wins",
+                "Draw",
+                "Playing",
+                "Bust"
+            ],
+            "x-enum-varnames": [
+                "DealerBust",
+                "PlayerWins",
+                "DealerWins",
+                "Draw",
+                "Playing",
+                "Bust"
+            ]
+        },
         "models.ResponseMsg": {
             "type": "object",
             "properties": {
@@ -59,23 +118,16 @@
                 "dealerValue": {
                     "type": "integer"
                 },
+                "device": {
+                    "type": "string"
+                },
                 "handValue": {
                     "type": "integer"
                 },
                 "status": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
+                    "$ref": "#/definitions/models.PlayStatus"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "ApiKeyAuth": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
         }
     }
 }
